<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/pattern_challenge"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:textSize="50sp"
        android:text="@string/string_patterns_caps"/>
    <Button
        android:id="@+id/submit_answer_button_pattern"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_below="@id/pattern_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp"
        android:text="@string/string_submit_answers"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_display"
        android:layout_below="@id/submit_answer_button_pattern"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/correct_header_pattern"
        android:layout_below="@id/submit_answer_button_pattern"
        android:layout_marginTop="200dp"
        android:layout_alignLeft="@id/recycler_view_display"
        android:layout_marginLeft="28dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pattern_text_28sp"
        android:text="@string/string_correct_answers"/>
    <TextView
        android:id="@+id/correct_total_pattern"
        android:layout_toRightOf="@id/correct_header_pattern"
        android:layout_alignTop="@id/correct_header_pattern"
        android:layout_alignBottom="@id/correct_header_pattern"
        android:layout_marginLeft="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pattern_text_28sp"
        android:text="0"/>
    <TextView
        android:id="@+id/total_pattern_divider"
        android:layout_toRightOf="@id/correct_total_pattern"
        android:layout_alignTop="@id/correct_header_pattern"
        android:layout_alignBottom="@id/correct_header_pattern"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pattern_text_28sp"
        android:text="/"/>
    <TextView
        android:id="@+id/total_pattern"
        android:layout_toRightOf="@id/total_pattern_divider"
        android:layout_alignTop="@id/correct_header_pattern"
        android:layout_alignBottom="@id/correct_header_pattern"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pattern_text_28sp"
        android:text="0"/>

    <TextView
        android:id="@+id/correct_header_patternID"
        android:layout_below="@id/correct_header_pattern"
        android:layout_marginTop="8dp"
        android:layout_alignLeft="@id/recycler_view_display"
        android:layout_marginLeft="22dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pattern_text_28sp"
        android:text="@string/string_correct_patterns"/>
    <TextView
        android:id="@+id/correct_total_patternID"
        android:layout_toRightOf="@id/correct_header_patternID"
        android:layout_alignTop="@id/correct_header_patternID"
        android:layout_alignBottom="@id/correct_header_patternID"
        android:layout_marginLeft="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pattern_text_28sp"
        android:text="0"/>
    <TextView
        android:id="@+id/total_pattern_dividerID"
        android:layout_toRightOf="@id/correct_total_patternID"
        android:layout_alignTop="@id/correct_header_patternID"
        android:layout_alignBottom="@id/correct_header_patternID"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pattern_text_28sp"
        android:text="/"/>
    <TextView
        android:id="@+id/total_patternID"
        android:layout_toRightOf="@id/total_pattern_dividerID"
        android:layout_alignTop="@id/correct_header_patternID"
        android:layout_alignBottom="@id/correct_header_patternID"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pattern_text_28sp"
        android:text="0"/>

</RelativeLayout>